[package]
name = "bridge-vaults-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
argh = "0.1.7"
config = { version = "0.11", default-features = false, features = ["yaml"] }
futures = "0.3.21"
log = "0.4.14"
log4rs = "1.0.0"
num-bigint = "0.3"
num-traits = "0.2"
once_cell = "1.9.0"
parking_lot = "0.12.0"
pomfrit = "0.1.4"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["sync", "macros", "rt-multi-thread", "parking_lot"] }
url = "2.2.2"
web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls"] }
